--- a/Frontend/frontend/src/Components/InfoField.css
+++ b/Frontend/frontend/src/Components/InfoField.css
@@ -1,10 +1,7 @@
 .info-field {
-    background-color: #3498db;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 8px;
-    text-align: center;
-    font-size: 18px;
-    margin-bottom: 20px;
-    width: 100%;
-  }
+  padding: 20px;
+  background: linear-gradient(to right, #4a90e2, #5cb3fd);
+  border-radius: 10px;
+  color: white;
+  text-align: center;
+}
