--- a/Frontend/frontend/src/Components/StatsChart.css
+++ b/Frontend/frontend/src/Components/StatsChart.css
@@ -1,8 +1,29 @@
-.stats-chart-container {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 400px;
-    width: 100%;
-  }
+.stats-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f9f9f9;
+  border: 3px solid #2ecc71;
+  border-radius: 12px;
+  padding: 40px;
+  margin: 10px;
+  margin-left: 0px;
+  width: 35%;
+  /* height: 100%; */
+  height: 530px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+}
+
+.stats-display h3 {
+  margin: 0;
+  font-size: 3rem;
+  color: #333;
+}
+
+.donations-amount {
+  margin-top: 20px;
+  font-size: 5rem;
+  font-weight: bold;
+  color: #27ae60;
+}
