--- a/Frontend/frontend/src/Components/StatsChart.css
+++ b/Frontend/frontend/src/Components/StatsChart.css
@@ -11,7 +11,7 @@
   margin-left: 0px;
   width: 35%;
   /* height: 100%; */
-  height: 530px;
+  height: 430px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
@@ -26,4 +26,11 @@
   font-size: 5rem;
   font-weight: bold;
   color: #27ae60;
+}
+
+.donation-Header {
+  margin-right: 1000px;
+  margin-top: 30px;
+  color: #333;
+  font-size: 35px;
 }
