--- a/Frontend/frontend/src/Pages/Dashboard.css
+++ b/Frontend/frontend/src/Pages/Dashboard.css
@@ -75,10 +75,51 @@
   /* inherit the rest from .sendmails-btn*/
   margin-right: 10px;
 }
+
+.pwd-change-section{
+  max-width: 50%;
+}
+
+.form-section {
+  color: black;
+  label {
+    font-size: 14px;
+    margin-bottom: 5px;
+    display: block;
+    color: black;
+  }
+  button {
+    /* margin-top: 10px; */
+    padding: 10px 16px;
+    background-color: #45a049;
+    color: wheat;
+    transition: background-color 0.3s ease, color 0.3s ease; /* Für sanfte Übergänge */
+
+  }
+  button:hover {
+    background-color: #3d8b41; /* Dunkleres Grün beim Hover */
+    color: white; /* Textfarbe ändert sich zu Weiß */
+  }
+  .message {
+    margin-top: -10px;
+    /* margin-top: 10px;
+    padding: 10px; */
+    color: red; /* Dunklere Schriftfarbe für bessere Lesbarkeit */
+  }
+  .message-success {
+    margin-top: -10px;
+    color: green; /* Dunklere Schriftfarbe für bessere Lesbarkeit */
+  }
+}
+
+
 /* Mobile Anpassungen für Layout und Flexbox */
 
 /* Anpassen des Layouts bei kleinen Bildschirmen */
 @media (max-width: 768px) {
+  .pwd-change-section {
+    max-width: 100%; /* Vollständige Breite auf mobilen Geräten */
+  }
   /* Container und Flexbox-Styling */
   .dashboard-wrapper {
     flex-direction: column; /* Boxen untereinander anordnen */
