--- a/Frontend/frontend/src/Pages/Dashboard.css
+++ b/Frontend/frontend/src/Pages/Dashboard.css
@@ -82,33 +82,42 @@
 
 .form-section {
   color: black;
-  label {
-    font-size: 14px;
-    margin-bottom: 5px;
-    display: block;
-    color: black;
-  }
   button {
     /* margin-top: 10px; */
     padding: 10px 16px;
     background-color: #45a049;
-    color: wheat;
+    color: white;
     transition: background-color 0.3s ease, color 0.3s ease; /* Für sanfte Übergänge */
-
+    
   }
   button:hover {
     background-color: #3d8b41; /* Dunkleres Grün beim Hover */
     color: white; /* Textfarbe ändert sich zu Weiß */
   }
   .message {
-    margin-top: -10px;
-    /* margin-top: 10px;
-    padding: 10px; */
+    margin: -13px 3px  3px;
+    padding: 10px 0px 10px; 
     color: red; /* Dunklere Schriftfarbe für bessere Lesbarkeit */
   }
   .message-success {
-    margin-top: -10px;
     color: green; /* Dunklere Schriftfarbe für bessere Lesbarkeit */
+    margin: 10px 3px  7px ;
+    padding: 10px 0px 10px; 
+  }
+  label {
+    font-size: 14px;
+    margin-bottom: 5px;
+    display: block;
+    color: black;
+  }
+  input {
+    width: calc(100% - 20px);
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1em;
+    box-shadow: 5px 5px rgba(49, 47, 47, 0.1);
   }
 }
 
