--- a/Frontend/frontend/src/Components/StatsChart.css
+++ b/Frontend/frontend/src/Components/StatsChart.css
@@ -43,7 +43,13 @@
   .stats-display {
     width: 80%; /* Breite auf 80% setzen auf kleinen Bildschirmen */
     height: auto; /* Höhe passt sich dem Inhalt an */
-    padding: 30px; /* Weniger Padding für kleinere Bildschirme */
+    padding: 10px; /* Weniger Padding für kleinere Bildschirme */
+    margin: 10px auto; /* Zentriert den Container */
+  }
+
+  .donations-amount span {
+    font-size: 2rem; /* Kleinere Schriftgröße für den Betrag */
+    margin-left: 0px; /* Kein Abstand mehr auf der linken Seite */
   }
 
   .stats-display h3 {
@@ -51,13 +57,14 @@
   }
 
   .donations-amount {
-    font-size: 3rem; /* Kleinere Schrift für den Betrag */
+    font-size: 2rem; /* Kleinere Schrift für den Betrag */
+    margin-top: 0px; /* Kein Abstand mehr oben */
   }
 
   .donation-Header {
     font-size: 24px; /* Kleinere Schriftgröße für den Header */
     margin-right: 0; /* Kein Abstand mehr auf der rechten Seite */
     text-align: center; /* Zentriert den Header */
-    margin-top: 10px; /* Weniger Abstand oben */
+    margin: 0px; 
   }
 }
