--- a/Frontend/frontend/src/Pages/Login.css
+++ b/Frontend/frontend/src/Pages/Login.css
@@ -1,20 +1,22 @@
-body {
+/* === Modal Overlay === */
+  body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
     /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://source.unsplash.com/random/1600x900'); */
+    font-family: Arial, sans-serif;
     background-color: #445279;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100vw;
     color: #ffffff;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); /* Zentriert das Element */
+    overflow-x: hidden;
   }
+  
+
+
   
   .container {
     width: 400px;
